app/assets/stylesheets/partials/_grid.scss
.cols{
  overflow: visible;
}
@include with-layout($app-xxl){
  .container{
    @include container();
    font-size: em(14px);
  }
  header, footer{
    @include span(full);
  }

  .content{
    @include span(15);
    padding-left: 2.5%;
  }

  .sidebar{
    @include span(last 9);
    overflow: hidden;
    padding-right: 2.5%;
  }

  .sidebar-container{
    @include span(full);
  }

  .slide-container{
    width: 210%;

    .sidebar-container{
      width: 47.5%;

      &:first-child{
        margin-right: 5%;
      }
    }
  }

  // inside .content
  @include nested(15){
    .accordion-content{
      @include span(full);
      @include pad(1);
    }

    .accordion-header{
      @include span(full);
    }

    .inner-left-col{
      @include span(8);
    }

    .inner-right-col{
      @include span(last 7);
    }

  }

  // inside .sidebar
  @include nested(3){
    .col-one-third{
      @include span(1);
      margin-right: 0;

      &:first-child{
        margin-right: gutter(3);
      }

      &:last-child{
        @include span(last 1.1);
      }
    }
  }
}

@include susy-breakpoint($bp-app-xl, $app-xl){
  .container{
    font-size: em($xl-font-size);
  }
}

@include susy-breakpoint($bp-app-large, $app-large){
  .container{
    @include container();
    font-size: em($large-font-size)
  }

  ul.tabs li{
    min-width: em(56px, $large-font-size);
  }
}

@include susy-breakpoint($bp-app-medium-large, $app-medium-large){
  .container{
    font-size: em($medium-large-font-size);
  }

  ul.tabs li{
    min-width: em(50px, $medium-large-font-size);

    a{
      padding: em(3px, $medium-large-font-size) em(6px, $medium-large-font-size);
    }
  }

  .bp-break-medium-large{
    display: block;
  }
}


// tablet view begins here (drops sidebar, makes it a nav tab)
@include susy-breakpoint($bp-app-medium, $app-medium){
  .desktop-float-right, .desktop-float-left{
    float: none;
  }

  .container{
    @include container();
    font-size: em($medium-font-size);
  }

  .content{
    @include span(full);
    padding-right: 2.5%;
  }

  .sidebar{
    @include span(full);
    padding-left: 2.5%;
    display: none;
  }

  .sidebar-tab{
    display: block;
  }

  .bp-break-medium-large{
    display: inline;
  }

  .tablet-visible{
    display: block;
  }

  .tablet-hide{
    display: none;
  }

  .fields{
    input[type=text], textarea{
      &.field-small{
        @include span(last 3 of 15);
      }
    }

    .form-error-container{
      margin-bottom: em(5px, $medium-font-size);
      @include span(full);
    }

    .field-small + .form-error-container{
      margin-bottom: 0;
      margin-right: 0;
    }

    .form-error{
      float: left;
      margin-left: span(5 of 15) + gutter(15);
    }

    &:not(.fields-small) .btn-mobile{
      margin-left: span(5 of 15) + gutter(15);
    }
  }

  .fields-small{
    li{
      flex-wrap: wrap;
    }
    label{
      @include span(full);
      text-align: left;
    }

    .form-error{
      float: right;
      margin-left: 0;
    }
  }

  .btn{
    font-size: em(13px, $medium-font-size);
    padding-left: em(11px, $medium-font-size);
    padding-right: em(11px, $medium-font-size);
  }

  .btn-mobile{
    @include span(full);
    margin-bottom: 1em;
    font-size: 1em;
  }
}

// mobile/phone view begins here
@include susy-breakpoint($bp-app-small, $app-small){
  .container{
    font-size: em($small-font-size);
    min-width: em(300px, $small-font-size);
  }

  .fields{
    li{
      flex-wrap: wrap;
    }
    label{
      @include span(full);
      text-align: left;
    }

    input[type=text], textarea{
      &.field-small{
        @include span(last 4 of 15);
      }
    }

    .form-error{
      margin-left: 0;
    }

    &:not(.fields-small) .btn-mobile{
      margin-left: 0;
    }
  }

  .mobile-visible{
    display: block;
  }

  .mobile-hide{
    display: none;
  }

  ul.tabs{
    font-size: 0.8em;
  }

  // inside .content
  @include nested(15){
    .inner-left-col, .inner-right-col{
      @include span(last 15);
    }
  }
}

